@@ -4,6 +4,7 @@ import io.codeleaf.oerm.object.mapping.DefaultObjectFieldMapper;
 import io.codeleaf.oerm.object.mapping.Mapping;
 import io.codeleaf.oerm.object.mapping.ObjectFieldMapper;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -19,8 +20,9 @@ public final class ObjectFieldMapperProvider {
         }
         return mappers.computeIfAbsent(mapping.mapper(), (mapper) -> {
             try {
-                return mapper.newInstance();
-            } catch (InstantiationException | IllegalAccessException cause) {
+                return mapper.getConstructor().newInstance();
+            } catch (InstantiationException | NoSuchMethodException | IllegalAccessException |
+                     InvocationTargetException cause) {
                 throw new IllegalStateException("Can't instantiate mapper: " + mapper.getCanonicalName());
             }
         });
